tests/scripts/errors/parse/catch_without_try.cdo
CATCH (e) {
    print("orphan catch");
}
